--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{github.actor}}
-          password: ${{secrets.GITHUB_TOKEN}}
+          password: ${{secrets.DOCKER_TOKEN}}
 
       - name: Build/Push container
         run: |
